--- a/style.css
+++ b/style.css
@@ -8,13 +8,15 @@
 
 body {
   background-color: #d5e1ef;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   font-family: "Outfit", sans-serif;
+  flex-direction: column;
 }
 
-.card {
-  position: fixed;
-  inset: 0;
-  margin: auto;
+.main{
   height: 470px;
   width: 320px;
   padding: 1rem;
@@ -31,14 +33,18 @@ body {
   border-radius: 10px;
 }
 
-.card h3 {
+.card-heading{
+  font-size: 18px;
+  padding: 0 1rem;
   margin-top: 1rem;
   text-align: center;
   font-weight: 700;
 }
 
-.card p {
-  padding: 1rem;
+.card-para{
+  padding: 0 1rem;
+  margin-top: .5rem;
+  margin-bottom: 2rem;
   text-align: center;
   font-weight: 400;
   font-size: 15px;
@@ -46,8 +52,5 @@ body {
 }
 
 .attribution{
-  position: absolute;
-  bottom: 50px;
-  text-align: center;
-  width: 100%;
+ margin-top: 4rem;
 }
